# django_ecommerce

./: manage.py  pyproject.toml  tox.ini
ecommerce/: settings.py  urls.py
store/: models.py  views.py
store/migrations/: 0001_initial.py  0002_product_image.py
store/templates/store/: cart.html  checkout.html  main.html  store.html
